--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </td>
 
         <td>
-          <a href="Contact.html">
+          <a href="contact.html">
           <button type="button" class="btn btn-info">
         <img src="images/icons8-contacts-32.png" alt="">  Contact</button>
           </a>
